# bamboofilters

./: CMakeLists.txt  README.md  figures.png:Zone.Identifier
src/: CMakeLists.txt
src/bamboofilter/: bamboofilter.hpp  bitsutil.h  predefine.h  segment.hpp
src/common/: BOBHash.cpp  BOBHash.h  bithack.h  random.h  timer.hpp  timing.h
test/: CMakeLists.txt  evaluation.cpp  example.cpp  experiment.cpp
